<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/adicionar_rem_dio"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="160dp"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        android:text="@string/nome_do_rem_dio"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="211dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="155dp"
        android:layout_height="29dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/quantidade_p_dia"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/dose_di_ria1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/adicionar_rem_dio2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="402dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/remover_rem_dio"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="60dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/adicionar_nome_para_exclus_o"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/remover_rem_dio2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="152dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/quantos_voc_tem_hoje"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ems="10"
        android:hint="@string/n_mero_de_pilulas"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>